Create a base object to expose everything within

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
 	<script type="text/javascript" src="src/lib/three.min.js"></script>
 	
+	<script type="text/javascript" src="src/Pointerly.js"></script>
+	
 </head> 
 <body>
 
