Get something working and displaying

--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
 	<script type="text/javascript" src="src/js/lib/three.min.js"></script>
 
 	<script type="text/javascript" src="src/js/Pointerly.js"></script>
+
+	<script type="text/javascript" src="src/js/core/init.js"></script>
 	
 </head> 
 <body>
 
 <script type="text/javascript">
 
-
+Pointerly.Init();
 
 </script>
 </body> 
