Correct the updated reference to three.js

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8"> 
 	<link rel="stylesheet" type="text/css" href="css/pointerly.css" />
 
-	<script type="text/javascript" src="src/js/lib/three.min.js"></script>
+	<script type="text/javascript" src="src/lib/three.min.js"></script>
 
 	<script type="text/javascript" src="src/js/Pointerly.js"></script>
 
