Add a way to create an environment

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 	<script type="text/javascript" src="src/js/Pointerly.js"></script>
 
 	<script type="text/javascript" src="src/js/core/init.js"></script>
+
+	<script type="text/javascript" src="src/js/environment/environment.js"></script>
 	
 </head> 
 <body>
