--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<link rel="stylesheet" type="text/css" href="css/pointerly.css" />
 
 	<script type="text/javascript" src="src/lib/three.min.js"></script>
+	<script type="text/javascript" src="src/lib/Detector.js"></script> 
+	<script type="text/javascript" src="src/lib/Stats.js"></script>
 
 	<script type="text/javascript" src="src/js/Pointerly.js"></script>
 
