Create a basic world with something in it, yet nothing displays properly

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 
 	<script type="text/javascript" src="src/js/core/init.js"></script>
 
+	<script type="text/javascript" src="src/js/display/Material.js"></script>
+	<script type="text/javascript" src="src/js/display/Shape.js"></script>
+
 	<script type="text/javascript" src="src/js/environment/environment.js"></script>
 	
 </head> 
