Get an animation working - basically a spinning camera

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<script type="text/javascript" src="src/lib/three.min.js"></script>
 	<script type="text/javascript" src="src/lib/Detector.js"></script> 
 	<script type="text/javascript" src="src/lib/Stats.js"></script>
+	<script type="text/javascript" src="src/lib/RequestAnimationFrame.js"></script>
 
 	<script type="text/javascript" src="src/js/Pointerly.js"></script>
 
