Change how colors are handled when drawing shapes

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 	<script type="text/javascript" src="src/js/display/Material.js"></script>
 	<script type="text/javascript" src="src/js/display/Shape.js"></script>
+	<script type="text/javascript" src="src/js/display/Triangle.js"></script>
 
 	<script type="text/javascript" src="src/js/environment/environment.js"></script>
 	
