--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	<script type="text/javascript" src="src/js/display/Material.js"></script>
 	<script type="text/javascript" src="src/js/display/Shape.js"></script>
 	<script type="text/javascript" src="src/js/display/Triangle.js"></script>
+	<script type="text/javascript" src="src/js/display/Circle.js"></script>
 
 	<script type="text/javascript" src="src/js/environment/environment.js"></script>
 	
