Change where code is located for the generation of shapes

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 	<script type="text/javascript" src="src/js/display/Triangle.js"></script>
 	<script type="text/javascript" src="src/js/display/Circle.js"></script>
 
+	<script type="text/javascript" src="src/js/display/ShapeGeneration.js"></script>
+
 	<script type="text/javascript" src="src/js/environment/environment.js"></script>
 	
 </head> 
