--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
 	<script type="text/javascript" src="src/js/display/ShapeGeneration.js"></script>
 
+	<script type="text/javascript" src="src/js/environment/Camera.js"></script>
 	<script type="text/javascript" src="src/js/environment/environment.js"></script>
 	
 </head> 
