Abstract away how the camera position is set from the external API

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 	<script type="text/javascript" src="src/js/Pointerly.js"></script>
 
+	<script type="text/javascript" src="src/js/core/Utils.js"></script>
 	<script type="text/javascript" src="src/js/core/init.js"></script>
 
 	<script type="text/javascript" src="src/js/display/Material.js"></script>
