--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
 	<script type="text/javascript" src="src/js/Pointerly.js"></script>
 
 	<script type="text/javascript" src="src/js/core/Utils.js"></script>
-	<script type="text/javascript" src="src/js/core/init.js"></script>
+	<script type="text/javascript" src="src/js/core/Init.js"></script>
 
 	<script type="text/javascript" src="src/js/display/Material.js"></script>
 	<script type="text/javascript" src="src/js/display/Shape.js"></script>
+	<script type="text/javascript" src="src/js/display/Shapes.js"></script>
 	<script type="text/javascript" src="src/js/display/Triangle.js"></script>
 	<script type="text/javascript" src="src/js/display/Circle.js"></script>
 
@@ -24,7 +25,7 @@
 
 	<script type="text/javascript" src="src/js/environment/Camera.js"></script>
 	<script type="text/javascript" src="src/js/environment/ClickHandler.js"></script>
-	<script type="text/javascript" src="src/js/environment/environment.js"></script>
+	<script type="text/javascript" src="src/js/environment/Environment.js"></script>
 	
 </head> 
 <body>
