Add a load of core Pointerly classes so things can be done in 2D rather thn 3D

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 	<script type="text/javascript" src="src/js/Pointerly.js"></script>
 
 	<script type="text/javascript" src="src/js/core/Utils.js"></script>
+	<script type="text/javascript" src="src/js/core/Scene.js"></script>
+	<script type="text/javascript" src="src/js/core/Canvas.js"></script>
+	<script type="text/javascript" src="src/js/core/Renderer.js"></script>
 	<script type="text/javascript" src="src/js/core/Init.js"></script>
 
 	<script type="text/javascript" src="src/js/display/Material.js"></script>
