Remove Material.js since it's no longer needed with the non-3Dness, while adding a basic Logger class

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 
 	<script type="text/javascript" src="src/js/Pointerly.js"></script>
 
+	<script type="text/javascript" src="src/js/core/Logger.js"></script>
 	<script type="text/javascript" src="src/js/core/Utils.js"></script>
 	<script type="text/javascript" src="src/js/core/Scene.js"></script>
 	<script type="text/javascript" src="src/js/core/Renderer.js"></script>
 	<script type="text/javascript" src="src/js/core/Init.js"></script>
 
-	<script type="text/javascript" src="src/js/display/Material.js"></script>
 	<script type="text/javascript" src="src/js/display/Shape.js"></script>
 	<script type="text/javascript" src="src/js/display/Shapes.js"></script>
 	<script type="text/javascript" src="src/js/display/Triangle.js"></script>
