Add a rectangle shape

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 	<script type="text/javascript" src="src/js/display/Shapes.js"></script>
 	<script type="text/javascript" src="src/js/display/Triangle.js"></script>
 	<script type="text/javascript" src="src/js/display/Circle.js"></script>
+	<script type="text/javascript" src="src/js/display/Rectangle.js"></script>
 
 	<script type="text/javascript" src="src/js/display/ShapeGeneration.js"></script>
 
