Add a basic class to represent the Home position

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	<script type="text/javascript" src="src/js/core/Logger.js"></script>
 	<script type="text/javascript" src="src/js/core/Utils.js"></script>
 	<script type="text/javascript" src="src/js/core/Scene.js"></script>
+	<script type="text/javascript" src="src/js/core/Home.js"></script>
 	<script type="text/javascript" src="src/js/core/Renderer.js"></script>
 	<script type="text/javascript" src="src/js/core/Init.js"></script>
 
