--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 	<script type="text/javascript" src="src/js/Pointerly.js"></script>
 
+	<script type="text/javascript" src="src/js/core/Storage.js"></script>
 	<script type="text/javascript" src="src/js/core/Logger.js"></script>
 	<script type="text/javascript" src="src/js/core/Utils.js"></script>
 	<script type="text/javascript" src="src/js/core/Scene.js"></script>
