Move the setup object out of Init and into the HTML page so that it canbe customused properly

--- a/index.html
+++ b/index.html
@@ -33,8 +33,32 @@
 <body>
 
 <script type="text/javascript">
-
-Pointerly.Init();
+var setup = {
+	shapes: [ Pointerly.Shapes.Triangle, Pointerly.Shapes.Circle, Pointerly.Shapes.Rectangle ],
+	colors: [ 'red', 'orange', 'blue', 'green', 'black' ],
+	shapeLayout: 'experiment',
+	shapeGenSettings: {
+		rowsOfShapes: 2,
+		columnsOfShapes: 3
+	},
+	clickType: 'mouse',
+	fixedViewBetweenEvents: false,
+	onShapeClick: function( environment, shape ){
+		Pointerly.CURRENT_ENVIRONMENT.removeShape( shape );
+		if( Pointerly.CURRENT_ENVIRONMENT.objects().length === 0 ){
+			Pointerly.CURRENT_ENVIRONMENT.generateShapes();
+		}
+	},
+	homePosition: {
+		width: 30,
+		height: 30,
+		color: 'red',
+		onEnter: function(){
+			// make a shape appear and stuff
+		}
+	}
+};
+Pointerly.Init( setup );
 
 </script>
 </body> 
