Add a code-golf-esque experiment implementation

--- a/index.html
+++ b/index.html
@@ -33,32 +33,7 @@
 <body>
 
 <script type="text/javascript">
-var setup = {
-	shapes: [ Pointerly.Shapes.Triangle, Pointerly.Shapes.Circle, Pointerly.Shapes.Rectangle ],
-	colors: [ 'red', 'orange', 'blue', 'green', 'black' ],
-	shapeLayout: 'experiment',
-	shapeGenSettings: {
-		rowsOfShapes: 2,
-		columnsOfShapes: 3
-	},
-	clickType: 'mouse',
-	fixedViewBetweenEvents: false,
-	onShapeClick: function( environment, shape ){
-		Pointerly.CURRENT_ENVIRONMENT.removeShape( shape );
-		if( Pointerly.CURRENT_ENVIRONMENT.objects().length === 0 ){
-			Pointerly.CURRENT_ENVIRONMENT.generateShapes();
-		}
-	},
-	homePosition: {
-		width: 30,
-		height: 30,
-		color: 'red',
-		onEnter: function(){
-			// make a shape appear and stuff
-		}
-	}
-};
-Pointerly.Init( setup );
+p=[200,400,600,800],w=[8,16,32,64],c=[],y=Pointerly,t=1,r=Math.random;for(i=0;i<4;i++)for(j=0;j<4;j++)c.push({p:p[i],w:w[j]});c.sort(function(){return r()-0.5});u={shapeLayout:function(e){if(t){v=e,t=0,l=c.shift(),d=e.renderer.domElement,h=d.height;e.addShape(new y.Shapes.Rectangle({width:l.w,height:h,position:new y.Vector2(d.width/2-(l.p/2*(r()<0.5?-1:1)),0)}))}},clickType:'mouse',onShapeClick:function(e,s){t=1;e.removeShape(s);if(c.length==0)e.logger.save()},homePosition:{onEnter:function(){if(c.length>0&&t)v.generateShapes()}}};Pointerly.Init(u)
 
 </script>
 </body> 
