--- a/index.html
+++ b/index.html
@@ -33,7 +33,55 @@
 <body>
 
 <script type="text/javascript">
-p=[200,400,600,800],w=[8,16,32,64],c=[],y=Pointerly,t=1,r=Math.random;for(i=0;i<4;i++)for(j=0;j<4;j++)c.push({p:p[i],w:w[j]});c.sort(function(){return r()-0.5});u={shapeLayout:function(e){if(t){v=e,t=0,l=c.shift(),d=e.renderer.domElement,h=d.height;e.addShape(new y.Shapes.Rectangle({width:l.w,height:h,position:new y.Vector2(d.width/2-(l.p/2*(r()<0.5?-1:1)),0)}))}},clickType:'mouse',onShapeClick:function(e,s){t=1;e.removeShape(s);if(c.length==0)e.logger.save()},homePosition:{onEnter:function(){if(c.length>0&&t)v.generateShapes()}}};Pointerly.Init(u)
+var positions = [200,400,600,800],
+	widths = [8,16,32,64],
+	combinations = [],
+	shouldGenerateShapes = true;
+
+for(var i = 0; i < positions.length; i++){
+	for(var j = 0; j < widths.length; j++){
+		combinations.push({
+			position: positions[i],
+			width: widths[j]
+		});
+	}
+}
+
+combinations.sort(function(){
+	return Math.random - 0.5;
+});
+
+var setup = {
+	shapeLayout: function( environment ){
+		if( shouldGenerateShapes ){
+			shouldGenerateShapes = false;
+			var element = combinations.shift(),
+				canvas = environment.renderer.domElement;
+			environment.addShape(new Pointerly.Shapes.Rectangle({
+				width: element.width,
+				height: canvas.height,
+				position: new Pointerly.Vector2( canvas.width/2-(element.position/2 * (Math.random() < 0.5 ? -1 : 1)), 0 )
+			}))
+		}
+	},
+	clickType: 'mouse',
+	onShapeClick: function( environment, shape ){
+		shouldGenerateShapes = true;
+		environment.removeShape( shape );
+		if( combinations.length === 0 ){
+			environment.logger.save();
+		}
+	},
+	homePosition: {
+		onEnter: function(){
+			if( combinations.length > 0 && shouldGenerateShapes ){
+				Pointerly.CURRENT_ENVIRONMENT.generateShapes();
+			}
+		}
+	}
+};
+
+Pointerly.Init( setup );
 
 </script>
 </body> 
