Remove the number of position and width combos for testing purposes

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@ var OBSERVATION = {},
 	OBSERVATION.FAR = 3,
 	OBSERVATION.CLOSE = 4;
 
-var positions = [200,400,600,800,-200,-400,-600,-800],
-	widths = [16,32,48,64],
+var positions = [200,-200,],
+	widths = [48,64],
 	combinations = [],
 	shouldGenerateShapes = true,
 	order = []
