Fix some issues with variable declaration

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
 <body>
 
 <script type="text/javascript">
-var OBSERVATION = {},
-	OBSERVATION.NONE = 1,
-	OBSERVATION.REMOTE = 2,
-	OBSERVATION.FAR = 3,
-	OBSERVATION.CLOSE = 4;
+var OBSERVATION = {};
+OBSERVATION.NONE = 1;
+OBSERVATION.REMOTE = 2;
+OBSERVATION.FAR = 3;
+OBSERVATION.CLOSE = 4;
 
 var positions = [200,-200,],
 	widths = [48,64],
