--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ OBSERVATION.REMOTE = 2;
 OBSERVATION.FAR = 3;
 OBSERVATION.CLOSE = 4;
 
-var positions = [200,-200,],
+var positions = [200,-200],
 	widths = [48,64],
 	combinations = [],
 	shouldGenerateShapes = true,
