Add a missing semi colon

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ var positions = [200,-200],
 	widths = [48,64],
 	combinations = [],
 	shouldGenerateShapes = true,
-	order = []
+	order = [];
 
 for(var i = 0; i < positions.length; i++){
 	for(var j = 0; j < widths.length; j++){
