--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ var positions = [200,-200],
 	shouldGenerateShapes = false,
 	order = [],
 	currentObservationType,
-	observationNumber = 1,
+	observationNumber = 0,
 	startingTest = true;
 
 var observationOrder = [
@@ -108,6 +108,8 @@ var setup = {
 			} else if( combinations.length === 0 && startingTest ){
 				generateCombinations();
 				document.addEventListener( 'keyup', startNextObservation );
+				currentObservationType = observationOrder[observationNumber];
+				observationNumber++;
 				startingTest = false;
 			}
 		}
