--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@ var startNextObservation = function(){
 	console.log('yay');
 	shouldGenerateShapes = true;
 	document.removeEventListener( 'keyup', startNextObservation );
+	Pointerly.CURRENT_ENVIRONMENT.generateShapes();
 };
 
 var generateCombinations = function(){
