--- a/index.html
+++ b/index.html
@@ -107,11 +107,13 @@ var setup = {
 			if( combinations.length > 0 && shouldGenerateShapes ){
 				Pointerly.CURRENT_ENVIRONMENT.generateShapes();
 			} else if( combinations.length === 0 && startingTest ){
-				generateCombinations();
 				currentObservationType = observationOrder[observationNumber];
-				observationNumber++;
-				startingTest = false;
-				document.addEventListener( 'keyup', startNextObservation );
+				if( typeof currentObservationType !== 'undefined' ){
+					generateCombinations();
+					observationNumber++;
+					startingTest = false;
+					document.addEventListener( 'keyup', startNextObservation );
+				}
 			}
 		}
 	}
