Add practive runs

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@ var positions = [600, 200,-200, -600],
 	startingTest = true;
 
 var observationOrder = [
+	OBSERVATION.PRACTICE,
 	OBSERVATION.NONE,
 	OBSERVATION.REMOTE,
 	OBSERVATION.FAR,
