Properly add a practice run

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@ OBSERVATION.NONE = 1;
 OBSERVATION.REMOTE = 2;
 OBSERVATION.FAR = 3;
 OBSERVATION.CLOSE = 4;
+OBSERVATION.PRACTICE = 5;
 
 var positions = [600, 200,-200, -600],
 	widths = [16, 32, 48, 64],
