Make the text on the shape a parameter

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ var recText = function( shapeSetup ){
 			ctx = settings.ctx;
 	
 		ctx.font = '15px Arial';
-		ctx.fillText('Recording Activated', 0, 12);
+		ctx.fillText(settings.text, 0, 12);
 	};
 
 	this.display( this.draw );
@@ -119,7 +119,8 @@ var setup = {
 				environment.addShape(new recText({
 					width: 150,
 					height: 60,
-					position: new Pointerly.Vector2( 0, 10 )
+					position: new Pointerly.Vector2( 0, 10 ),
+					text: 'Recording Activated'
 				}));
 			}
 		}
