Change the situation complete text

--- a/index.html
+++ b/index.html
@@ -145,10 +145,10 @@ var setup = {
 					generateCombinations();
 					if (observationNumber > 0) {
 						Pointerly.CURRENT_ENVIRONMENT.addShape(new recText({
-							width: 150,
+							width: 250,
 							height: 60,
 							position: new Pointerly.Vector2( 200, 200 ),
-							text: 'Situation Complete'
+							text: 'Situation Complete. Call organiser.'
 						}));
 					}
 					observationNumber++;
