Change the name of a round to round

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ var setup = {
 							width: 250,
 							height: 60,
 							position: new Pointerly.Vector2( 200, 200 ),
-							text: 'Situation Complete. Call organiser.'
+							text: 'Round Complete. Call organiser.'
 						}));
 					}
 					observationNumber++;
