Increase the number of position and width combos

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@ OBSERVATION.DEMO = 6;
 
 var demoPositions = [200, -300],
 	demoWidths = [32, 64],
-	positions = [200,-200],
-	widths = [16, 32, 64],
+	positions = [400, 200,-200, -400],
+	widths = [16, 32, 48, 64],
 	combinations = [],
 	shouldGenerateShapes = false,
 	order = [],
