Add ability to logg arbitrary data

--- a/index.html
+++ b/index.html
@@ -135,7 +135,12 @@ recText.prototype.constructor = recText;
 recText.prototype.toString = function(){
 	return 'Recording';
 };
-
+// participant number, type of observation
+// shuffling
+// reocording thing appears when you press i
+// practice thing doesn't clear early enough
+// physical timestamp of things
+// register shape
 
 var setup = {
 	shapeLayout: function( environment ){
