--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 	<script type="text/javascript" src="src/js/core/Renderer.js"></script>
 	<script type="text/javascript" src="src/js/core/Init.js"></script>
 
+	<script type="text/javascript" src="src/js/data/Analysis.js"></script>
+
 	<script type="text/javascript" src="src/js/display/Shape.js"></script>
 	<script type="text/javascript" src="src/js/display/Shapes.js"></script>
 	<script type="text/javascript" src="src/js/display/Triangle.js"></script>
