Save the CSV outputs to file when a round ends

--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@ var setup = {
 		}
 		if( combinations.length === 0 ){
 			environment.logger.save();
+			environment.storage.save( 'csvness', Pointerly.Analysis.HomeToShape( environment.logger.data ) );
 			startingTest = true;
 		}
 	},
