--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ OBSERVATION.DEMO = 6;
 
 var demoPositions = [200, -300],
 	demoWidths = [32, 64],
-	positions = [400, 200,-200, -400],
+	positions = [600, 400, 200, -200, -400, -600],
 	widths = [16, 32, 48, 64],
 	combinations = [],
 	shouldGenerateShapes = false,
